package com.itheima;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringbootTliasApplication {

    public static void main(String[] args) {
        SpringApplication.run(SpringbootTliasApplication.class, args);
    }

}
